--- a/_config.yml
+++ b/_config.yml
@@ -13,38 +13,38 @@ baseurl: ''
 lang: en
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Shanghai
+timezone: Europe/London
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: 'OpenQASM 3.0 Reference Implementation'                        # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: 'For Qiskit Advocate Mentorship Program #23'   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+  Qiskit 'QAMP' #23
+  OpenQASM 3.0 Reference implementation
+  https://github.com/mentor-fall2021-openqasm/openqasm3_reference_implementation
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://github.com/mentor-fall2021-openqasm/openqasm3_reference_implementation'
 
 github:
-  username: github_username             # change to your github username
+  username: mentor-fall2021-openqasm             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: open-qasm-3.0            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@doamin.com             # change to your email address
+  name: QAMP#23_Team
+  email: team@team             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://github.com/mentor-fall2021-openqasm/openqasm3_reference_implementation     # change to your twitter homepage
+           # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -72,7 +72,7 @@ google_analytics:
 #     light  - Use the light color scheme
 #     dark   - Use the dark color scheme
 #
-theme_mode:   # [light|dark]
+theme_mode: dark   # [light|dark]
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
@@ -82,7 +82,7 @@ theme_mode:   # [light|dark]
 img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://cdn.jsdelivr.net/gh/cotes2020/chirpy-images/commons/avatar.jpg
+avatar: /assets/img/favicons/qiskit-logo.png
 
 # boolean type, the global switch for ToC in posts.
 toc: true
